welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:36: error: not found: value avancer
    avancer(7)
    ^PictureMono2:38: error: not found: value reculer
  reculer(20)
  ^PictureMono2:46: error: not found: value avancer
    avancer(7)
    ^